objects/IPElementCS__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>BccSender__c</fullName>
        <label>BccSender</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reply__c</fullName>
        <label>Reply</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <label>Template Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>IPDev Email</label>
</CustomObject>